# ZenLib

.github/workflows/: ZenLib_Checks.yml
Source/Tests/: CMakeLists.txt  test_bitstream.cpp
Source/ZenLib/: BitStream_Fast.h  BitStream_LE.h
